Wed May 28 20:03:48 BST 2003  Olly Betts <olly@survex.com>

	* api/omdocument.cc: Removed include of defunct header
	  modifieddocument.h.

Wed May 28 20:00:56 BST 2003  Olly Betts <olly@survex.com>

	* api/maptermlist.h,api/omdocument.cc,api/omvalueiterator.cc,
	  backends/inmemory/inmemory_document.cc,
	  backends/inmemory/inmemory_document.h,backends/muscat36/,
	  backends/net/net_document.cc,backends/net/net_document.h,
	  backends/quartz/quartz_document.cc,backends/quartz/quartz_document.h,
	  common/Makefile.am,common/document.h,common/modifieddocument.h,
	  include/xapian/document.h,tests/api_db.cc: Fixed bug in refactored
	  Xapian::Document when modifying a copy.  Added regression test.

Wed May 28 19:23:26 BST 2003  Olly Betts <olly@survex.com>

	* common/omenquireinternal.h,include/xapian/database.h,
	  include/xapian/enquire.h,include/xapian/query.h: Where possible,
	  declare classes rather than including headers (in public headers).

Wed May 28 17:32:14 BST 2003  Olly Betts <olly@survex.com>

	* include/xapian/document.h: Just declare "class TermIterator;" rather
	  than including <xapian/termiterator.h>.

Tue May 27 16:59:34 BST 2003  Olly Betts <olly@survex.com>

	* common/progserver.h,common/socketserver.h,net/socketserver.cc:
	  Reduced needless header inclusion.

Tue May 27 16:53:40 BST 2003  Olly Betts <olly@survex.com>

	* bin/omprogsrv.cc,tests/api_db.cc: Use variable name "dbs" in
	  preference to "dbgrp".  OmDatabaseGroup hasn't existed for
	  years!

Tue May 27 16:51:30 BST 2003  Olly Betts <olly@survex.com>

	* Makefile.am: Fixed typo: "bin" should be "net" in remote_subdirs.

Tue May 27 02:43:32 BST 2003  Olly Betts <olly@survex.com>

	* backends/quartz/Makefile.am: Removed -I referencing testsuite
	  directory.

Tue May 27 02:39:43 BST 2003  Olly Betts <olly@survex.com>

	* backends/quartz/,docs/tests.html,tests/: Moved quartztest and
	  btreetest to tests/ directory.

Tue May 27 02:03:07 BST 2003  Olly Betts <olly@survex.com>
