@@ -2,13 +2,16 @@
 
 INCLUDES = -I$(top_srcdir)/include -I${top_builddir}/include # -I$(top_srcdir)/testsuite
 
+xapianincludedir = $(includedir)/xapian
+omcompatincludedir = $(includedir)/om
+
+xapianinclude_HEADERS = queryparser.h
+omcompatinclude_HEADERS = omparsequery.h
+
 lib_LTLIBRARIES = libomqueryparser.la
-libomqueryparserincludedir = $(includedir)/om
-libomqueryparserinclude_HEADERS = omparsequery.h
+check_PROGRAMS = queryparsertest
+TESTS = queryparsertest
 
-check_PROGRAMS = parsequerytest
-TESTS = parsequerytest
-
-libomqueryparser_la_SOURCES = parsequery.yy
-parsequerytest_SOURCES = parsequerytest.cc
-parsequerytest_LDADD = libomqueryparser.la ../libxapian.la
+libomqueryparser_la_SOURCES = queryparser.yy
+queryparsertest_SOURCES = queryparsertest.cc
+queryparsertest_LDADD = libomqueryparser.la ../libxapian.la
